[tool.poetry]
name = "youtube-downloader"
version = "0.1.0"
description = "Simple YouTube playlist downloader"
authors = ["Shireen <shireenlowyk@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
yt-dlp = "^2024.11.18"
tqdm = "^4.66.1"
tk = "^0.1.0"
streamlit = "^1.31.1"
ffmpeg-python = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
